--- a/trunk/data/units/mongoose/mongoose.template
+++ b/trunk/data/units/mongoose/mongoose.template
@@ -1,4 +1,13 @@
 <Unit>
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000" back="0.000000" recharge="0.000000"/>
+	</Defense>
+	<Upgrade file="shield_2_Level1"/>
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_2"/>
+	<Upgrade file="reinforced_hull"/>
+
 	<Mount weapon="Photon" size="light medium heavy" x="0.800000" y="-0.600000" z="8.000000"/>
 	<Mount weapon="Photon" size="light medium heavy" x="-0.800000" y="-0.600000" z="8.000000"/>
 	<Mount weapon="Swarm" size="Special Special-Missile" x="2.000000" y="0.800000" z="-4.000000" ammo="75" volume="1000" />
