--- a/trunk/data/units/avenger/avenger.template
+++ b/trunk/data/units/avenger/avenger.template
@@ -1,5 +1,12 @@
 <Unit>
-
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000" back="0.000000" recharge="0.000000"/>
+	</Defense>
+	<Upgrade file="shield_2_Level4"/>
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_4"/>
+	<Upgrade file="reinforced_hull"/>
 	<Thrust>
 		<Engine Afterburner="1066.666718" Forward="205.333344" Retro="254.666676" Left="202.666672" Right="202.666672" Top="202.666672" Bottom="202.666672"/>
 		<Maneuver yaw="2643.200050" pitch="2187.800201" roll="3643.200050"/>
@@ -26,13 +33,6 @@
 	<Mount weapon="Hail" size="special special-missile" x="-10.0" y="-3.5" z="11.8091" ammo="110" volume="2400"/>
         <Mount weapon="Hail" size="special special-missile" x="10.0" y="-3.5" z="11.8091" ammo="110" volume="2400"/>
 	
-	<Defense RepairDroid="6"  ecm=".3">
-		<Armor front="390" right="350" left="350" back="300"/>
-		<Shields front="500.0" right="500" left="500"  back="500.000000" recharge="60.000000"/>
-		<Cloak cloakmin=".25" cloakrate=".1" cloakenergy="79.0"/>
-		<Hull strength="2000.000000"/>
-	</Defense>
-
 	<Stats mass="16.000000" momentofinertia="16.000000" fuel="170000000">
 	</Stats>
 
@@ -41,10 +41,6 @@
 	</Computer>
 
 	<Jump delay="1" jumpenergy="2100"/>       
-
-	<Energy>
-		<Reactor recharge="75" limit="2500"/>
-	</Energy>
 
 	<description>
 	</description>
