--- a/trunk/data/units/dagger/dagger.template
+++ b/trunk/data/units/dagger/dagger.template
@@ -1,23 +1,21 @@
 <Unit>
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000" left="0" right="0" back="0.000000" recharge="0.000000"/>
+	</Defense>
+	<Upgrade file="shield_4_Level2"/>
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_3"/>
+	<Upgrade file="micro_shielded_hull"/>
 	<Thrust>
 		<Engine Afterburner="1166.666641" Forward="356.000000" Retro="324.000000" Left="328.000000" Right="328.000000" Top="328.000000" Bottom="328.000000"/>
 		<Maneuver yaw="2932.400101" pitch="3287.800201" roll="2832.400101"/>
 	</Thrust>
 	<Sound>
 	</Sound>
-	<Defense>
-		<Armor front="400" right="300" left="300" back="400"/>
-		<Shields front="200.000000" right="200.000000" left="200.000000" back="200.000000" recharge="30.000000"/>
-		<Hull strength="1000.000000"/>
-		<Cloak cloakmin=".3" cloakrate=".1" cloakenergy="0"/>       
-	</Defense>
 	<Stats mass="5.000000" momentofinertia="5.000000" fuel="200000000"></Stats>
 	<Computer yaw="92.800003" pitch="106.600006" roll="92.800003" afterburner="116.666664" maxspeed="38.000000"/>
-
-	<Energy afterburnenergy="40">
-		<Reactor recharge="168" limit="600"/>
-	</Energy>
-           	<Jump delay="1" jumpenergy="400"/>              
+	<Jump delay="1" jumpenergy="400"/>              
 
 
 <!-- new elements added -->
