--- a/units/firefly/firefly.template
+++ b/units/firefly/firefly.template
@@ -1,5 +1,13 @@
 <Unit >
 	<cockpit file="hornet-cockpit.cpt" x="0" y="00" z="10"/>
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000"  right="0" left="0" back="0.000000" recharge="0.000000"/>
+	</Defense>
+	<Upgrade file="shield_4_Level4"/>
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_3"/>
+	<Upgrade file="reinforced_hull"/>
 
 	<Mount weapon="Ion" size="Light Medium" x="10.400000" y="8.00000" z="-6.0000"/>
 	<Mount weapon="Ion" size="Light Medium" x="-10.400000" y="8.00000" z="-6.0000"/>
