--- a/units/hispidus/hispidus.template
+++ b/units/hispidus/hispidus.template
@@ -1,5 +1,13 @@
 <Unit>
-
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000" right="0.000000" left="0.000000" back="0.000000" recharge="0.000000"/>
+		<Hull strength="1250.000000"/>
+	</Defense>
+	<Upgrade file="shield_4_Level5"/>
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_5"/>
+	<Upgrade file="micro_shielded_hull"/>
 
 
 <Mount weapon="HvyIonBeam" size="Light Medium Heavy Special" x="-5.277" y="2.683" z="21.963"/>
@@ -11,27 +19,11 @@
 <Mount weapon="HvyIonBeam" size="Light Medium Heavy Special" x="-3,021" y="-3,924" z="18,562"/>
 
 
-
-<Defense>
-
-	<Armor front="2000" right="2000" left="2000" back="2000"/>
-
-	<Shields front="500.000000" back="500.000000" recharge="60.000000"/>
-
-	<Hull strength="1000.000000"/>
-
-</Defense>
-
-
 <Stats mass="10.000000" momentofinertia="5.000000" fuel="20000000"></Stats>
 
 <Computer yaw="140" pitch="140" roll="140" afterburner="214" maxspeed="85">
 </Computer>
 
-
-<Energy>	
-	<Reactor recharge="400" limit="1400"/>
-</Energy>
 	<Jump delay="1" jumpenergy="400"/>
 
 
