--- a/units/osprey/osprey.template
+++ b/units/osprey/osprey.template
@@ -1,4 +1,12 @@
 <Unit>
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000" right="0.000000" left="0.000000" back="0.000000" recharge="0.000000"/>
+	</Defense>
+	<Upgrade file="shield_4_Level3"/>
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_2"/>
+	<Upgrade file="double_plated_hull"/>
 	<Mount weapon="Particle" size="Heavy" x="6.000000" y="-.9000000" z="-3.000000"/>
 	<Mount weapon="Particle" size="Heavy" x="-6.000000" y="-.9000000" z="-3.000000"/>	
 	<Mount weapon="Ion" size="Medium" x="000000" y="-.6000000" z="12.000000"/>
@@ -15,23 +23,11 @@
 		<Engine Afterburner="1500.333282" Forward="500.333344" Retro="500.666676" Left="500.666672" Right="500.666672" Top="500.666672" Bottom="500.666672"/>
 		<Maneuver yaw="6000.000000" pitch="6000.000000" roll="6000.000000"/>
 	</Thrust>
-	<Sound>
-	</Sound>
-	<Defense>
-		<Armor front="1000" right="1000" left="1000" back="1000"/>
-		<Shields front="300.000000" right="300.000000" left="300.000000" back="250.000000" recharge="40.000000"/>
-		<Hull strength="1250.000000"/>
-		<Cloak rate=".4" cloakmin=".1"/>
-	</Defense>
-	<Stats mass="5.000000" momentofinertia="5.000000" fuel="200000000"></Stats>
-	<Cockpit x="0" y="0" z="12"/>
+
 	<Computer yaw="138.000000" pitch="138.000000" roll="138.000000" afterburner="233.333328" maxspeed="82.666668">
-		<Radar itts="true" color="true" error="0"/> </Computer>
+	</Computer>
 
 
-	<Energy afterburnenergy="30">
-		<Reactor recharge="140" limit="400"/>
-	</Energy>
        	<Jump delay="1" jumpenergy="180"/>       
 <!-- new elements added -->
 <Subunit file="turretsmall" x="0.089912" y="0.120528" z="-6.000000" ri="0.994033" rj="-0.109082" rk="0.000000" qi="0.000000" qj="0.000000" qk="-1.000000"/>
