--- a/units/f109vampire/f109vampire.template
+++ b/units/f109vampire/f109vampire.template
@@ -1,4 +1,13 @@
 <Unit>
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000"  left="0" right="0" back="0.000000" recharge="0.000000"/>
+	</Defense>
+	<Upgrade file="shield_4_Level3"/>
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_2"/>
+	<Upgrade file="polymer_hull"/>
+
 <!-- new elements added -->
 <Mount weapon="KtekBeam" size="Special Medium Heavy" x="0.730882" y="0.293518" z="23.003031" />
 <Mount weapon="Disruptor" size="Light Medium" x="-0.010562" y="0.432593" z="25.065680" />
@@ -11,9 +20,7 @@
 	</Thrust>
 	<Sound> </Sound>
 	<Defense>
-		<Armor front="1500" right="1480" left="1480" back="1600"/>
-		<Shields front="200" right="200" left="200" back="200" recharge="40"/>
-		<Hull strength="2000"/>
+		<Shields front="200" right="200" left="200" back="200"/>
 	</Defense>
 	<Stats mass="7" momentofinertia="7" fuel="2000000000"></Stats>
 	<Computer yaw="133.500000" pitch="133.500000" roll="133.500000" afterburner="150.000000" maxspeed="88.800000"/>
