--- a/units/aeon/aeon.template
+++ b/units/aeon/aeon.template
@@ -1,4 +1,13 @@
 <Unit>
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000"  left="0" right="0" back="0.000000" recharge="0.000000"/>
+	</Defense>
+	<Upgrade file="shield_4_Level2"/>
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_3"/>
+	<Upgrade file="polymer_hull"/>
+
 	<Mount weapon="DisruptorBeam" size="light medium" x="5.600000" y="-1.600000" z="3.200000"/>
 	<Mount weapon="DisruptorBeam" size="light medium" x="-5.600000" y="-1.600000" z="3.200000"/>
 	<Mount weapon="HeatSeeker" size="light-missile medium-missile" x="3.600000" y="-1.600000" z="1.200000" ammo="1" volume="161"/>
@@ -13,19 +22,11 @@
 	</Thrust>
 	<Sound>
 	</Sound>
-	<Defense>
-		<Armor front="45" right="40" left="40" back="40"/>
-		<Shields front="200.000000" back="200.000000" recharge="30.000000"/>
-		<Hull strength="1000.000000"/>
-		<Cloak cloakmin=".25" cloakrate=".2" cloakenergy="64"/>
-	</Defense>
+
 	<Stats mass="3.000000" momentofinertia="3.000000" fuel="600000000"></Stats>
 	<Computer yaw="148.000000" pitch="170.600006" roll="200.200012" afterburner="144" maxspeed="56">
 </Computer>
 
-	<Energy afterburnenergy="30">
-		<Reactor recharge="64" limit="150"/>
-	</Energy>
            	<Jump delay="1" jumpenergy="90"/>       
 	<Hold volume="18">
 	</Hold>
