--- a/units/destiny/destiny.template
+++ b/units/destiny/destiny.template
@@ -1,21 +1,20 @@
 <Unit>
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000"  back="0.000000" recharge="0.000000"/>
+	</Defense>
+	<Upgrade file="shield_2_Level2"/>
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_2"/>
+	<Upgrade file="polymer_hull"/>
 	<Thrust>
 		<Engine Afterburner="1400.000000" Forward="500.333344" Retro="454.666676" Left="302.666672" Right="302.666672" Top="302.666672" Bottom="302.666672"/>
 		<Maneuver yaw="3487.800201" pitch="3387.800201" roll="3387.800201"/>
 	</Thrust>
 	<Sound>
 	</Sound>
-	<Defense>
-		<Armor front="200" right="150" left="150" back="150"/>
-		<Shields front="200.000000" back="200.000000" recharge="30.000000"/>
-		<Hull strength="2400.000000"/>
-		<Cloak cloakmin=".1" cloakrate=".3" cloakenergy="110" cloakglass="true"/>       		
-	</Defense>
 	<Stats mass="3.500000" momentofinertia="3.500000" fuel="40000000"></Stats>
 	<Computer yaw="106.600006" pitch="106.600006" roll="106.600006" afterburner="140.000000" maxspeed="44.666668"/>
-	<Energy>
-		<Reactor recharge="180" limit="380"/>
-	</Energy>
        	<Jump delay="1" jumpenergy="200"/>       
 
        
