--- a/units/kyta/kyta.template
+++ b/units/kyta/kyta.template
@@ -1,22 +1,25 @@
 <Unit>
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000"  left="0" right="0" back="0.000000" recharge="0.000000"/>
+	</Defense>
+	<Upgrade file="shield_4_Level1"/>
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_1"/>
+	<Upgrade file="coated_hull"/>
 	<Thrust>
 		<Engine Afterburner="1596.999969" Forward="634.399994" Retro="592.599995" Left="467.199997" Right="467.199997" Top="467.199997" Bottom="467.199997"/>
 		<Maneuver yaw="2615.500000" pitch="3615.500000" roll="3615.500000"/>
 	</Thrust >
 	<Sound>
 	</Sound>
-	<Defense>
-		<Armor front="300" right="280" left="280" back="200"/>
-		<Shields front="124.000000" right="120.000000" left="120.000000" back="124.000000" recharge="30.000000"/>
-		<Hull strength="2500.000000"/>
- 	</Defense>
 	<Stats mass="2.000000" momentofinertia="2.000000" fuel="100000000"></Stats>
 	<Computer yaw="103.500000" pitch="243.500000" roll="203.500000" afterburner="149.699997" maxspeed="70.299999">
 		<Radar itts="false" color="true" error="0"/> </Computer>
 
 
 	<Energy afterburnenergy="14">
-		<Reactor recharge="24" limit="124"/>
+
 	</Energy>
        	<Jump delay="1" jumpenergy="90"/>
 <Mount weapon="Tachyon" size="Special Heavy" x="-6.118179" y="0.000000" z="2.773746" />
