--- a/units/nova/nova.template
+++ b/units/nova/nova.template
@@ -1,4 +1,13 @@
 <Unit>
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000"  back="0.000000" recharge="0.000000"/>
+	</Defense>
+	<Upgrade file="shield_2_Level3"/><!-- 4?-->
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_4"/>
+	<Upgrade file="double_plated_hull"/>
+
 	<Mount weapon="Laser" size="Light" x="1.000000" y="0.000000" z="4.000000"/>
 	<Mount weapon="Laser" size="Light" x="-1.000000" y="0.000000" z="4.000000"/>
 	<Mount weapon="Meson" size="Light Medium" x="4.000000" y="0.000000" z="4.500000"/>
@@ -14,17 +23,9 @@
 	</Thrust>
 	<Sound>
 	</Sound>
-	<Defense HudImage="nova-hud.spr">
-		<Armor front="400" right="350" left="350" back="400"/>
-		<Shields front="400.000000" back="350.000000" recharge="40.000000"/>
-		<Hull strength="8000.000000"/>
-	</Defense>
 
 	<Stats mass="1.500000" momentofinertia="1.500000" fuel="50000000"></Stats>
 	<Computer yaw="181.800003" pitch="181.800003" roll="181.800003" afterburner="150.000000" maxspeed="63.000000"/>
-	<Energy afterburnenergy="0">
-		<Reactor recharge="200" limit="1000"/>
-	</Energy>
        	<Jump delay="1" jumpenergy="90"/>       
 
 <!-- new elements added -->
