--- a/trunk/data/units/kira/kira.template
+++ b/trunk/data/units/kira/kira.template
@@ -1,4 +1,12 @@
 <Unit>
+	<Upgrade file="godsansshields"/>
+	<Defense>
+		<Shields front="0.000000"  left="0" right="0" back="0.000000" recharge="0.000000"/>
+	</Defense>
+	<Upgrade file="shield_4_Level3"/>
+	<Upgrade file="isometal"/>
+	<Upgrade file="engine_level_5"/>
+	<Upgrade file="micro_shielded_hull"/>
 	<Mount weapon="Anihilator" size="Special Heavy light-capship" x="-1.700000" y="0.100000" z="7.800000"/>
 	<Mount weapon="Anihilator" size="Special Heavy light-capship" x="1.700000" y="0.100000" z="7.800000"/>
 	<Mount weapon="Reaper" size="Heavy" x="-1.400000" y="-2.200000" z="6.000000"/>
@@ -24,19 +32,13 @@
 	<Sound>
 	</Sound>
 
-	<Defense>
-		<Armor front="1550" right="1500" left="1500" back="1550"/>
-		<Shields front="500.000000" right="500.000000" left="500.000000" back="500.000000" recharge="60.000000"/>
-		<Hull strength="2400.000000"/>
-	</Defense>
-
 	<Stats mass="9.000000" momentofinertia="5.000000" fuel="200000000"></Stats>
 
 	<Computer yaw="100.500000" pitch="100.500000" roll="100.500000" afterburner="140.300003" maxspeed="45.599998"/ >
 	</Computer>
 
 	<Energy>
-		<Reactor recharge="240" limit="900"/>
+		<Reactor limit="900"/>
 	</Energy>
        
        	<Jump delay="1" jumpenergy="500"/>       
