--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -435,7 +435,7 @@ This is done many times later in this config file
 			<var name="background" value="false"/>
 #end -->
 <!-- #Voodoo TNT GeForce2 GeForce3 -->
-			<var name="background" value="true"/>
+			<var name="background" value="false"/>
 <!-- #end -->
 <!-- #Software Voodoo TNT GeForce2 -->
 			<var name="cockpit" value="false"/>
