added the logos as png files

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -603,6 +603,8 @@ This is done many times later in this config file
 			</section>
 		</section>
 		<section name="physics">
+			<var name="game_speed" value="1000"/>
+			<var name="game_accel" value=".00002"/>
 			<var name="ai_pilot_when_in_turret" value="true"/>
 			<var name="atmosphereheight" value="10"/>
 			<!-- the next variable tells what percentage
