help me out here

--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -37,6 +37,7 @@ A description for the catagories. This is text that appears in the menu
 #desc music_off No Music
 #desc linux_int_music_on Linux Music
 #desc windows_safe Windows2000 nVidia
+
 #desc linux_safe Standard
 #desc stable Safe Mode
 #desc P200MHz 200MHz
@@ -53,6 +54,10 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 
         <bindings>
 		<bind key="S" modifier="none" command="Cockpit::SkipMusicTrack" />
+ 		<bind key="F" modifier="none" command="CommFormUp" />
+ 		<bind key="B" modifier="none" command="CommBreakForm" />
+ 		<bind key="H" modifier="none" command="CommHelpMeOut" />
+ 		<bind key="D" modifier="none" command="CommAttackTarget" />
  		<bind key="1" modifier="none" command="Comm1Key" />
  		<bind key="2" modifier="none" command="Comm2Key" />
  		<bind key="3" modifier="none" command="Comm3Key" />
@@ -84,11 +89,11 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 		<bind key="t" modifier="none" command="TargetKey" />
 		<bind key="p" modifier="none" command="PickTargetKey" />
 		<bind key="n" modifier="none" command="NearestTargetKey" />
-		<bind key="h" modifier="none" command="ThreatTargetKey" />
+<!--		<bind key="h" modifier="none" command="ThreatTargetKey" />-->
 		<bind key="T" modifier="none" command="TurretTargetKey" />
 		<bind key="P" modifier="none" command="TurretPickTargetKey" />
 		<bind key="N" modifier="none" command="TurretNearestTargetKey" />
-		<bind key="H" modifier="none" command="TurretThreatTargetKey" />
+		<bind key="h" modifier="none" command="TurretThreatTargetKey" />
                 <bind key="`" modifier="none" command="SheltonKey" />
                 <bind key="-" modifier="none" command="DecelKey"/>
                 <bind key="+" modifier="none" command="AccelKey" />
@@ -558,8 +563,10 @@ This is done many times later in this config file
 			<var name="explode" value="explosion.wav"/>
 		</section>
 		<section name="joystick">
-			<var name="warp_mouse" value="true"/>
-			<var name="mouse_sensitivity" value="5"/>
+			<var name="warp_mouse" value="false"/>
+			<var name="warp_mouse_zone" value="200"/>
+			<var name="mouse_exponent" value="1"/>
+			<var name="mouse_sensitivity" value=".1"/>
 			<var name="deadband" value="0.05"/>
 			<var name="debug_digital_hatswitch" value="false"/>
 			<var name="force_feedback" value="false" />
