--- a/trunk/data/units/destiny/destiny.template
+++ b/trunk/data/units/destiny/destiny.template
@@ -20,10 +20,10 @@
        
 
 <!-- new elements added -->
-<Mount weapon="Photon" size="light medium" x="-0.557420" y="-0.127850" z="7.305732"/>
-<Mount weapon="Photon" size="light medium" x="0.542021" y="-0.126382" z="7.221802" />
-<Mount weapon="Photon" size="special medium" x="6.470487" y="-0.182350" z="-1.094219"/>
-<Mount weapon="Photon" size="special medium" x="-6.512798" y="-0.183760" z="-1.121801"/>
+<Mount weapon="Photon" size="light medium Autotracking" x="-0.557420" y="-0.127850" z="7.305732"/>
+<Mount weapon="Photon" size="light medium Autotracking" x="0.542021" y="-0.126382" z="7.221802" />
+<Mount weapon="Photon" size="special medium Autotracking" x="6.470487" y="-0.182350" z="-1.094219"/>
+<Mount weapon="Photon" size="special medium Autotracking" x="-6.512798" y="-0.183760" z="-1.121801"/>
 
 <Mount weapon="ImageRecognition" size="light-missile medium-missile" x="4.470487" y="-0.182350" z="-1.094219" ammo="2" volume="601"/>
 <Mount weapon="ImageRecognition" size="light-missile medium-missile" x="-4.512798" y="-0.183760" z="-1.121801" ammo="2" volume="601"/>
