--- a/trunk/data/units/revoker/revoker.template
+++ b/trunk/data/units/revoker/revoker.template
@@ -36,12 +36,12 @@
 
 	</Hold>       
 <Dock x="0" y="0" z="50" size="25"/>	
-<Mount weapon="KtekBeam" size="Light Medium Heavy" x="127.0566" y="43.7594" z="121.3314" ri="-0.249141" rj="-0.024868" rk="0.968148" qi="-0.395678" qj="-0.909816" qk="-0.125192"/>
-<Mount weapon="Ktek" size="Light Medium Heavy" x="119.3102" y="23.8918" z="118.8276" ri="-0.249142" rj="-0.024868" rk="0.968148" qi="-0.395678" qj="-0.909816" qk="-0.125192"/>
-<Mount weapon="Ktek" size="Light Medium Heavy" x="115.6352" y="60.7088" z="118.8276" ri="-0.249142" rj="-0.024868" rk="0.968148" qi="-0.395678" qj="-0.909816" qk="-0.125192"/>
-<Mount weapon="KtekBeam" size="Light Medium Heavy" x="-127.2548" y="41.7694" z="121.3318" ri="0.249142" rj="-0.024868" rk="0.968148" qi="0.567703" qj="0.813658" qk="-0.125192"/>
-<Mount weapon="Ktek" size="Light Medium Heavy" x="-115.7342" y="59.7138" z="118.828" ri="0.249142" rj="-0.024868" rk="0.968148" qi="0.567703" qj="0.813658" qk="-0.125192"/>
-<Mount weapon="Ktek" size="Light Medium Heavy" x="-119.409" y="22.8968" z="118.828" ri="0.249142" rj="-0.024868" rk="0.968148" qi="0.567704" qj="0.813658" qk="-0.125193"/>
+<Mount weapon="KtekBeam" size="Light Medium Heavy Autotracking" x="127.0566" y="43.7594" z="121.3314" ri="-0.249141" rj="-0.024868" rk="0.968148" qi="-0.395678" qj="-0.909816" qk="-0.125192"/>
+<Mount weapon="Ktek" size="Light Medium Heavy Autotracking" x="119.3102" y="23.8918" z="118.8276" ri="-0.249142" rj="-0.024868" rk="0.968148" qi="-0.395678" qj="-0.909816" qk="-0.125192"/>
+<Mount weapon="Ktek" size="Light Medium Heavy Autotracking" x="115.6352" y="60.7088" z="118.8276" ri="-0.249142" rj="-0.024868" rk="0.968148" qi="-0.395678" qj="-0.909816" qk="-0.125192"/>
+<Mount weapon="KtekBeam" size="Light Medium Heavy Autotracking" x="-127.2548" y="41.7694" z="121.3318" ri="0.249142" rj="-0.024868" rk="0.968148" qi="0.567703" qj="0.813658" qk="-0.125192"/>
+<Mount weapon="Ktek" size="Light Medium Heavy Autotracking" x="-115.7342" y="59.7138" z="118.828" ri="0.249142" rj="-0.024868" rk="0.968148" qi="0.567703" qj="0.813658" qk="-0.125192"/>
+<Mount weapon="Ktek" size="Light Medium Heavy Autotracking" x="-119.409" y="22.8968" z="118.828" ri="0.249142" rj="-0.024868" rk="0.968148" qi="0.567704" qj="0.813658" qk="-0.125193"/>
 
 
 
