--- a/trunk/data/units/starfish/starfish.template
+++ b/trunk/data/units/starfish/starfish.template
@@ -25,14 +25,14 @@
 
 <!-- new elements added -->
 <Mount weapon="KtekBeam" size="Heavy Medium" x="0.340207" y="15.660674" z="2.633940"/>
-<Mount weapon="Disruptor" size="Medium Light Special" x="-8.405925" y="14.270943" z="2.638443"/>
-<Mount weapon="Ktek" size="Heavy Medium" x="-13.961499" y="7.488401" z="2.628920"/>
-<Mount weapon="Disruptor" size="Medium Light Special" x="-14.071106" y="-1.264541" z="2.630254"/>
+<Mount weapon="Disruptor" size="Medium Light Special Autotracking" x="-8.405925" y="14.270943" z="2.638443"/>
+<Mount weapon="Ktek" size="Heavy Medium Autotracking" x="-13.961499" y="7.488401" z="2.628920"/>
+<Mount weapon="Disruptor" size="Medium Light Special Autotracking" x="-14.071106" y="-1.264541" z="2.630254"/>
 <Mount weapon="KtekBeam" size="Heavy Medium" x="-8.318096" y="-7.460289" z="2.600782"/>
-<Mount weapon="Disruptor" size="Medium Light Special" x="0.020000" y="-8.895386" z="2.546662" />
-<Mount weapon="Ktek" size="Heavy Medium" x="7.138566" y="-4.772924" z="2.540798" />
+<Mount weapon="Disruptor" size="Medium Light Special Autotracking" x="0.020000" y="-8.895386" z="2.546662" />
+<Mount weapon="Ktek" size="Heavy Medium Autotracking" x="7.138566" y="-4.772924" z="2.540798" />
 <Mount weapon="KtekBeam" size="Heavy Medium" x="10.533229" y="2.823476" z="2.616701" />
-<Mount weapon="Ktek" size="Heavy Medium" x="7.773383" y="10.995417" z="2.621394"/> 
+<Mount weapon="Ktek" size="Heavy Medium Autotracking" x="7.773383" y="10.995417" z="2.621394"/> 
 <Dock x="-2.389462" y="3.759991" z="0.020980" size="5.000000" ri="0.866026" rj="-0.500000" rk="0.000000" qi="0.000000" qj="-0.000000" qk="-1.000000"/>
 	<Hold volume="150">
 	</Hold>
