--- a/trunk/data/vegastrike.config
+++ b/trunk/data/vegastrike.config
@@ -284,7 +284,10 @@ Farther down, you will see "#Software". Currently, it's line 213. You'll find mo
 			<section name="mesh">
 				<var name="testvar" value="-4"/>
 			</section>
-
+			<var name="head_lag" value="10"/>
+			<var name="cockpit_shake" value="1"/>
+			<var name="shake_reduction" value=".01"/>
+			<var name="shake_speed" value="100"/>
 			<var name="star_body_radius" value=".4"/>
 			<var name="star_glow_radius" value="1.3"/>
 			<var name="glow_ambient_star_light" value="false"/>
